@@ -2,6 +2,7 @@
 
 	* src/introspect.c (dfsch_get_stack_trace): get_stack_trace works
 	(stack_frame_apply): stack frames are inspectable by user code
+	REgister some primitive functions and stack frame type
 
 2008-09-17  Ales Hakl  <ales at hakl dot net>
 
